# postal-gambit

./: .flake8  .gitignore  ARCHITECTURE.md  DEVELOPMENT-README.md  INSTALLER_LICENSE  README.md  TESTING.md  WIRE_FORMAT.md  build_flatpak.sh  builddmg.py  buildexe.py  buildinstaller.py  clean_flatpak.sh  generate_icons.py  main.py  nuitka-crash-report.xml  pyproject.toml  requirements-dev.txt  requirements.txt
assets/: postal-gambit.icns
docs/: index.html  site.css  why.html
docs/open/: index.html
installer/: app.py
postalgambit/: __init__.py  version.py
postalgambit/application/: __init__.py  dto.py  export_service.py  game_service.py  import_service.py  move_service.py  ports.py
postalgambit/domain/: __init__.py  applink.py  errors.py  game.py  identity.py  pgn_tags.py  subject.py  wire.py
postalgambit/infrastructure/: __init__.py  clock.py  ids.py  rules_pychess.py  settings_json.py  store_json.py
postalgambit/ui/: __init__.py  actions.py  board_widget.py  central_layout.py  dead_hover.py  icons.py  keyboard_nav.py  labels.py  launch.py  main_window.py  menus.py  side_panel.py  theme.py
tests/: fakes.py
tests/application/: conftest.py  test_dto.py  test_export_service.py  test_game_service.py  test_import_service.py  test_move_service.py
tests/domain/: test_applink.py  test_game.py  test_identity.py  test_pgn_tags.py  test_subject.py  test_wire.py
tests/infrastructure/: test_clock_and_ids.py  test_rules_pychess.py  test_settings_json.py  test_store_json.py
tests/structural/: scan.py  test_domain_purity.py  test_layer_boundaries.py  (+3 more)
(+5 files in other folders)
